<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_title">Kết nối dễ dàng với\ngia đình và bạn bè\nkhắp các quốc gia</string>
    <string name="terms_policy">Điều khoản &amp; Chính sách Bảo mật</string>
    <string name="start_messaging">Bắt đầu nhắn tin</string>
    <string name="illustration_desc">Illustration describing the app feature</string>
    <string name="start_messing">Bắt đầu trò chuyện</string>
    <string name="enter_phone_number">Nhập số điện thoại của bạn</string>
    <string name="contrinue">Tiếp tục</string>
    <string name="phone_number">Nhập số điện thoại</string>
    <string name="country_phone">Vui lòng chọn quốc gia và nhập số điện thoại của bạn</string>
    <string name="andora">Andorra</string>
    <string name="united_arab_emirates">Các Tiểu vương quốc Ả Rập Thống nhất (UAE)</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="antigua_and_barbuda">Antigua và Barbuda</string>
    <string name="anguilla">Anguilla</string>
    <string name="albania">Albania</string>
    <string name="armenia">Armenia</string>
    <string name="angola">Ăng-gô-la</string>
    <string name="antarctica">Nam Cực</string>
    <string name="argentina">Argentina</string>
    <string name="american_samoa">Samoa thuộc Mỹ</string>
    <string name="austria">Áo</string>
    <string name="australia">Úc</string>
    <string name="aruba">Aruba</string>
    <string name="aland_islands">Quần đảo Åland</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="andorra">Andorra</string>
    <string name="bosnia">Bosnia và Herzegovina</string>
    <string name="barbados">Barbados</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="belgium">Nước Bỉ</string>
    <string name="burkina_faso">Burkina Faso</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="bahrain">Bahrain</string>
    <string name="burundi">Burundi</string>
    <string name="benin">Bénin</string>
    <string name="saint_barhelemy">Thánh Barthélemy</string>
    <string name="bermuda">Bermuda</string>
    <string name="brunei_darussalam">Brunei Darussalam</string>
    <string name="bolivia">Bôlivia</string>
    <string name="brazil">Brazil</string>
    <string name="bahamas">Bahamas</string>
    <string name="bhutan">Bhutan</string>
    <string name="botswana">Botswana</string>
    <string name="belarus">Bêlarut</string>
    <string name="belize">Belize</string>
    <string name="canada">Canada</string>
    <string name="cocos">Quần đảo Cocos (keeling)</string>
    <string name="congo_democratic">Congo, Cộng hòa Dân chủ Congo</string>
    <string name="central_african">Cộng hòa Trung Phi</string>
    <string name="congo">Congo</string>
    <string name="switzerland">Thụy Sĩ</string>
    <string name="cote_dlvoire">Côte D\'ivoire</string>
    <string name="cook_islands">Quần đảo Cook</string>
    <string name="chile">Chilê</string>
    <string name="cameroon">Ca-mơ-run</string>
    <string name="china">Trung Quốc</string>
    <string name="colombia">Colombia</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="cuba">Cuba</string>
    <string name="cape_verde">Cabo Verde</string>
    <string name="curacao">Curaçao</string>
    <string name="christmas_island">Đảo Giáng sinh</string>
    <string name="cyprus">Síp</string>
    <string name="czech_republic">Cộng hòa Séc</string>
    <string name="germany">Nước Đức</string>
    <string name="djibouti">Djibouti</string>
    <string name="denmark">Đan Mạch</string>
    <string name="dominica">Dominica</string>
    <string name="dominician_republic">Cộng hòa Dominica</string>
    <string name="algeria">Algérie</string>
    <string name="ecuador">Ecuador</string>
    <string name="estonia">Estonia</string>
    <string name="egypt">Ai Cập</string>
    <string name="eritrea">Eritrea</string>
    <string name="spain">Tây ban nha</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="finland">Phần Lan</string>
    <string name="fiji">Fiji</string>
    <string name="falkland_islands">Quần đảo Falkland (malvinas)</string>
    <string name="micro">Micronesia, Liên Bang</string>
    <string name="faroe_islands">Quần đảo Faroe</string>
    <string name="france">Pháp</string>
    <string name="gabon">Gabon</string>
    <string name="united_kingdom">Vương quốc Anh</string>
    <string name="grenada">Grenada</string>
    <string name="georgia">Gruzia</string>
    <string name="french_guyana">Guyana thuộc Pháp</string>
    <string name="ghana">Ghana</string>
    <string name="guernsey">Guernsey</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="greenland">Greenland</string>
    <string name="gambia">Gambia</string>
    <string name="guinea">Ghi-nê</string>
    <string name="guadeloupe">Guadeloupe</string>
    <string name="equatorial_guinea">Guinea Xích đạo</string>
    <string name="greece">Hy Lạp</string>
    <string name="guatemala">Guatemala</string>
    <string name="guam">Đảo Guam</string>
    <string name="guinea_bissau">Guiné-bissau</string>
    <string name="guyana">Guyana</string>
    <string name="hong_kong">Hồng Kông</string>
    <string name="honduras">Honduras</string>
    <string name="croatia">Croatia</string>
    <string name="haiti">Haiti</string>
    <string name="hungary">Hungary</string>
    <string name="indonesia">Indonesia</string>
    <string name="ireland">Ireland</string>
    <string name="israil">Israel</string>
    <string name="isle_of_man">Đảo Man</string>
    <string name="iceland">Iceland</string>
    <string name="india">Ấn Độ</string>
    <string name="british_indian_ocean">Lãnh thổ Ấn Độ Dương thuộc Anh</string>
    <string name="iraq">Irắc</string>
    <string name="iran">Iran, Cộng hòa Hồi giáo</string>
    <string name="italia">Ý</string>
    <string name="jersey">Áo đấu</string>
    <string name="jamaica">Jamaica</string>
    <string name="jordan">Jordan</string>
    <string name="japan">Nhật Bản</string>
    <string name="kenya">Kenya</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="cambodia">Campuchia</string>
    <string name="kiribati">Kiribati</string>
    <string name="comoros">Comoros</string>
    <string name="saint_kitts">Saint Kitts và Nevis</string>
    <string name="north_korea">Bắc Triều Tiên</string>
    <string name="south_korea">Hàn Quốc</string>
    <string name="kuwait">Cô-oét</string>
    <string name="cayman_islands">Quần đảo Cayman</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="laos">Cộng hòa Dân chủ Nhân dân Lào</string>
    <string name="lebanon">Liban</string>
    <string name="saint_lucia">Thánh Lucia</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="siri_lanka">Sri Lanka</string>
    <string name="liberia">Liberia</string>
    <string name="lesotho">Lesotho</string>
    <string name="lithuania">Litva</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="latvia">Latvia</string>
    <string name="libya">Lybia</string>
    <string name="marocco">Ma-rốc</string>
    <string name="monaco">Monaco</string>
    <string name="moldova">Moldova, Cộng hòa</string>
    <string name="montenegro">Montenegro</string>
    <string name="saint_martin">Thánh Martin</string>
    <string name="madagascar">Madagascar</string>
    <string name="marshall_islands">Quần đảo Marshall</string>
    <string name="north_macedonia">Macedonia (FYROM)</string>
    <string name="mali">Mali</string>
    <string name="myanmar">Myanmar</string>
    <string name="mongolia">Mông Cổ</string>
    <string name="macau">Ma Cao</string>
    <string name="northern_mariana">Quần đảo Bắc Mariana</string>
    <string name="martinique">Martinique</string>
    <string name="mauriatana">Mauritanie</string>
    <string name="montserrat">Montserrat</string>
    <string name="malta">Malta</string>
    <string name="mauritius">Mô-ri-xơ</string>
    <string name="maldives">Maldives</string>
    <string name="malawi">Ma-la-uy</string>
    <string name="mexico">México</string>
    <string name="malaysia">Malaysia</string>
    <string name="mozambique">Mozambique</string>
    <string name="namibia">Namibia</string>
    <string name="new_caledonia">Tân Caledonia</string>
    <string name="niger">Niger</string>
    <string name="norfolk">Quần đảo Norfolk</string>
    <string name="nigeria">Nigeria</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="netherlands">Hà Lan</string>
    <string name="norway">Na Uy</string>
    <string name="nepal">Nepal</string>
    <string name="nauru">Nauru</string>
    <string name="niue">Niue</string>
    <string name="new_zealand">New Zealand</string>
    <string name="oman">Ô-man</string>
    <string name="panama">Panama</string>
    <string name="peru">Peru</string>
    <string name="french_polynesia">Polynesia thuộc Pháp</string>
    <string name="papua_new_guinea">Papua New Guinea</string>
    <string name="philippinies">Philippin</string>
    <string name="pakistan">Pakistan</string>
    <string name="poland">Ba Lan</string>
    <string name="saint_pierre">Thánh Pierre và Miquelon</string>
    <string name="pitcairn">Quần đảo Pitcairn</string>
    <string name="puerto_rico">Puerto Rico</string>
    <string name="state_of_palestine">Palestine</string>
    <string name="portugal">Bồ Đào Nha</string>
    <string name="palau">Palau</string>
    <string name="paraguay">Paraguay</string>
    <string name="qatar">Qatar</string>
    <string name="reunion">Đoàn tụ</string>
    <string name="romania">Rumani</string>
    <string name="serbia">Serbia</string>
    <string name="russia">Liên bang Nga</string>
    <string name="rwanda">Rwanda</string>
    <string name="saudi_arabia">Ả Rập Saudi</string>
    <string name="solomon_islands">Quần đảo Solomon</string>
    <string name="seychelles">Seychelles</string>
    <string name="sudan">Sudan</string>
    <string name="sweden">Thụy Điển</string>
    <string name="singapore">Singapore</string>
    <string name="saint_helena">Thánh Helena, Thăng thiên và Tristan Da Cunha</string>
    <string name="slovenia">Slovenia</string>
    <string name="slovakia">Slovakia</string>
    <string name="sierra_leone">Sierra Leone</string>
    <string name="san_marino">San Marino</string>
    <string name="senegal">Sénégal</string>
    <string name="somali">Somali</string>
    <string name="suriname">Suriname</string>
    <string name="south_sudan">Nam Sudan</string>
    <string name="sao_tome">Sao Tome và Principe</string>
    <string name="el_salvador">El Salvador</string>
    <string name="sint_maarten">Sint Maarten</string>
    <string name="syrian">Cộng hòa Ả Rập Syria</string>
    <string name="swaziland">Swaziland</string>
    <string name="turks_and_caicos">Quần đảo Turks và Caicos</string>
    <string name="chad">Tchad</string>
    <string name="togo">Togo</string>
    <string name="thailand">Thái Lan</string>
    <string name="taijikistan">Tajikistan</string>
    <string name="tokelau">Tokelau</string>
    <string name="timor_leste">Đông Timor</string>
    <string name="turkmenistan">Turkmenistan</string>
    <string name="tunisia">Tunisia</string>
    <string name="tonga">Tonga</string>
    <string name="turkey">Thổ Nhĩ Kỳ</string>
    <string name="trinidad_and_tobago">Trinidad &amp; Tobago</string>
    <string name="tuvalu">Tuvalu</string>
    <string name="taiwan">Đài Loan</string>
    <string name="tazmania">Tanzania, Cộng hòa thống nhất</string>
    <string name="ukraina">Ukraina</string>
    <string name="uganda">Uganda</string>
    <string name="united_states_america">Nước Mỹ</string>
    <string name="uruguay">Uruguay</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="holy_see">Tòa Thánh (Thành phố Vatican)</string>
    <string name="saint_vincent">Saint Vincent và Grenadines</string>
    <string name="venezuela">Venezuela, Cộng hòa Bolivar</string>
</resources>