<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="250dp"
        android:layout_height="260dp"
        android:layout_marginTop="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/illustration_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connect_eas"
        android:layout_width="275dp"
        android:layout_height="118dp"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <TextView
        android:id="@+id/terms_priva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_policy"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <FrameLayout
        android:id="@+id/button_start"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:background="@drawable/button_rounded"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/tv_button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contrinue"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
